add queryparser for games and creators
